<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/background_dialog"
        android:gravity="center">
        <TextView
            android:id="@+id/text_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out_title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_logout_cancel"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_log_out_ok"
                android:text="@string/log_out_cancel"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/text_color2"
                android:layout_marginEnd="10dp"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/btn_logout_ok"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/emailCheck"
                android:textStyle="bold"
                android:background="@drawable/btn_log_out_cancel"
                android:textColor="@color/app_color3"
                android:textSize="16sp"
                app:backgroundTint="@null"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>